# MiniFs

./: .clang-format  CMakeLists.txt
Include/MiniFS/: Api.h  Config.h  FileApi.h  FsApi.h  FsFileApi.h  NetApi.h
Src/: Api.c  Config.c  FileApi.c  FsApi.c  FsFileApi.c  Main.c  MiniFsClient.c  MiniFsServer.c  NetApiClient.c  NetApiServer.c
